# taskforce-one

./: .env.example  .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt  task.md
.github/workflows/: ci.yml
config/: agents.yaml  crews.yaml  settings.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api_reference.rst  conf.py  index.rst
docs/core/: agents.rst  crews.rst  tools.rst
docs/guides/: configuration.rst  deployment.rst  development.rst  llm_integration.rst
scripts/: deploy.sh  dev.sh  docs.sh  format.sh  health.sh  lint.sh  logs.sh  run.sh  setup.sh  test.sh
src/taskforce_one/: __init__.py  api.py  cli.py
src/taskforce_one/agents/: __init__.py  base.py
src/taskforce_one/config/: __init__.py  loader.py
src/taskforce_one/crews/: __init__.py  base.py
src/taskforce_one/llm/: __init__.py  crewai_adapter.py  provider.py
src/taskforce_one/tools/: __init__.py  registry.py
tests/: __init__.py  conftest.py
tests/e2e/: test_deployment.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_config_loader.py  test_crews.py  test_llm_provider.py  test_tools.py
